# RustRocketStudy

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2021-07-01-103707_create_users/: up.sql
src/: main.rs
src/api/: dto.rs  mod.rs  user.rs
src/db/: mod.rs  schema.rs  user.rs
src/service/: user.rs
