[package]
name = "simple_web"
version = "0.1.0"
authors = ["yjp19871013@126.com <yjp19871013@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde_json = "1.0.64"
serde_derive = "1.0.126"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.diesel]
version = "1.4.4"
features = ["mysql"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_mysql_pool"]
